@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-09T16:22:38Z",
-  "count_outdated" : 647,
-  "uniques_outdated" : 369,
+  "timestamp" : "2022-11-10T08:24:01Z",
+  "count_outdated" : 648,
+  "uniques_outdated" : 370,
   "count" : 670,
   "uniques" : 380,
   "clones" : [
-    {
-      "timestamp": "2022-10-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-28T00:00:00Z",
       "count": 3,
